unpackaged/objects/USSI_Submission__c.object
<CustomObject>
    <fields>
        <fullName>USSI_Priority_Eight__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority Eight</label>
        <referenceTo>USSI_Project__c</referenceTo>
        <relationshipName>Intern_Submissions8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USSI_Priority_Five__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority Five</label>
        <referenceTo>USSI_Project__c</referenceTo>
        <relationshipName>Intern_Submissions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USSI_Priority_Four__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority Four</label>
        <referenceTo>USSI_Project__c</referenceTo>
        <relationshipName>Intern_Submissions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USSI_Priority_Nine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority Nine</label>
        <referenceTo>USSI_Project__c</referenceTo>
        <relationshipName>Intern_Submissions9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USSI_Priority_One__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority One</label>
        <referenceTo>USSI_Project__c</referenceTo>
        <relationshipName>Intern_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USSI_Priority_Seven__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority Seven</label>
        <referenceTo>USSI_Project__c</referenceTo>
        <relationshipName>Intern_Submissions7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USSI_Priority_Six__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority Six</label>
        <referenceTo>USSI_Project__c</referenceTo>
        <relationshipLabel>Project Submissions (Priority SIx)</relationshipLabel>
        <relationshipName>Intern_Submissions5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USSI_Priority_Ten__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority Ten</label>
        <referenceTo>USSI_Project__c</referenceTo>
        <relationshipName>Intern_Submissions001V</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USSI_Priority_Three__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority Three</label>
        <referenceTo>USSI_Project__c</referenceTo>
        <relationshipName>Intern_Submissions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USSI_Priority_Two__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority Two</label>
        <referenceTo>USSI_Project__c</referenceTo>
        <relationshipName>Intern_Submissions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USSI_Status__c</fullName>
        <description>Is the submission completed on in draft</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USSI_Student_Intern__c</fullName>
        <label>Student Intern</label>
        <referenceTo>USSI_Student__c</referenceTo>
        <relationshipLabel>Project Submissions</relationshipLabel>
        <relationshipName>Project_Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>USSI_Student_Name__c</fullName>
        <formula>USSI_Student_Intern__r.USSI_Full_Name__c</formula>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <label>Project Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>USSI_Student_Name__c</columns>
        <columns>USSI_Student_Intern__c</columns>
        <columns>USSI_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>USSI_Printable</fullName>
        <columns>USSI_Student_Name__c</columns>
        <columns>USSI_Priority_One__c</columns>
        <columns>USSI_Priority_Two__c</columns>
        <columns>USSI_Priority_Three__c</columns>
        <columns>USSI_Priority_Four__c</columns>
        <columns>USSI_Priority_Five__c</columns>
        <columns>USSI_Priority_Six__c</columns>
        <columns>USSI_Priority_Seven__c</columns>
        <columns>USSI_Priority_Eight__c</columns>
        <columns>USSI_Priority_Nine__c</columns>
        <columns>USSI_Priority_Ten__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>USSI_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Printable</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REC-{0000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>